# Otus-Lessons-web_1

./: Locators.py  conftest.py  pyproject.toml
pages/: BasePage.py  CardItemPage.py  CatalogPage.py  LoginPage.py  MainPage.py
pages/admin_panel/: AdminBasePage.py  AdminCatalogPage.py
pages/admin_panel/elements/: navigation_panel_el.py
pages/elements/: top_panel_el.py
tests/: test_administration.py  test_for_opencart_1.py
